5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1800_2573.log
== TEST (2019-06-10 16:31:30) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))

for i in range(size(ms)):
	imc = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18,49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18,5 and x < 24,99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29,99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34,99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39,99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 13
    elif x >17 and x < 18,49:
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:32:03) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))

for i in range(size(ms)):
	imc = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18,5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
File "XXXX", line 17
    elif x > 18,5 and x < 24.99:
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:32:21) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))

for i in range(size(ms)):
	imc = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:33:05) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))

for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 16:36:17) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = 0
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:23:17) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = 0
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:47:23) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=int)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:48:45) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc,2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:49:53) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	if x < 17:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:50:56) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	print(imc)
	if x < 17:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:53:01) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	imc[i] =round(imc,2)
	if x < 17:
		f = round(imc[i],2)
		print(imc[i])
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:53:21) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	imc=round(imc,2)
	if x < 17:
		f = round(imc[i],2)
		print(imc[i])
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:54:15) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc[i] = ms[i]/al[i]**2
	x = max(imc)
	print(imc)
	if x < 17:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:54:58) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc = ms[i]/al[i]**2
	x = max(imc)
	print(imc)
	if x < 17:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:55:32) 
-- CODE:
from numpy import*

ms = array(eval(input("massa:")))
al = array(eval(input("altura:")))
imc = zeros(size(ms),dtype=float)
for i in range(size(ms)):
	imc = ms[i]/al[i]**2
	x = max(imc[i])
	print(imc)
	if x < 17:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("MUITO ABAIXO DO PESO")
	elif x >17 and x < 18.49:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ABAIXO DO PESO")
	elif x > 18.5 and x < 24.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("PESO NORMAL")
	elif x > 25 and x < 29.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("ACIMA DO PESO")
	elif x > 30 and x < 34.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE")
	elif x > 35 and x < 39.99:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE SEVERA")
	elif x > 40:
		f = round(imc[i],2)
		print("O MAIOR IMC DA TURMA EH:",f)
		print("OBESIDADE MORBIDA")
		
		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:50:27) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(40>= max(b)):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:50:48) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif(40>= max(b)):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.27734
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:51:35) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)> 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.942779
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:51:45) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)> 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.08666
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:52:06) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.966897
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:52:29) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 < max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.13508
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa:altura:[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:52:38) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.1573
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:55:30) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)> 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:55:36) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)> 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.05892
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:57:36) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b) < 17):
	print("MUITO ABAIXO DO PESO")
elif(17 <= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")
elif(35<= max(b)<=39.99):
	print("obesidade severa")
elif( max(b)> 40):
	print("obesidade morbida")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.05665
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:58:27) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")
elif(35<= max(b)<=39.99):
	print("obesidade severa")
elif( max(b)> 40):
	print("obesidade morbida")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.0859
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 16:58:52) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 16:58:56) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 <+ max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.13916
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:01:47) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 >= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.3103
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:02:01) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 > max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
0.977993
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:02:10) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<=17):
	print("MUITO ABAIXO DO PESO")
elif(17 > max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO IDEAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.17513
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO IDEAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
massa:altura:[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa:altura:[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:03:00) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 >= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO NORMAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.20378
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
massa:altura:[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
massa:altura:[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 17:03:18) 
-- CODE:
from numpy import*
p = array(eval(input("massa:")))
a = array(eval(input("altura:")))
n = size(p)
b = zeros(n)
i = 0 
for x in p:
	b[i] = round((x/a[i]**2),2)
	i = i + 1
print(b)
print("O MAIOR IMC DA TURMA EH:",max(b))
if(max(b)<17):
	print("MUITO ABAIXO DO PESO")
elif(17 <= max(b)<=18.49):
	print("ABAIXO DO PESO")
elif(18.5<= max(b)<=24.99):
	print("PESO NORMAL")
elif(25<= max(b)<=29.99):
	print("ACIMA DO PESO")
elif(30<= max(b)<=34.99):
	print("OBESIDADE")
elif(35<= max(b)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(b)>= 40):
	print("OBESIDADE MORBIDA")

		
		
		
		
		
		
	
	
	
	
	
	
-- EXECUTION TIME:
1.15829
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
